aos overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -112,6 +112,7 @@ button:focus {
 .page-home {
   display: grid;
   grid-template-rows: 80px 1fr;
+  overflow: hidden;
 }
 .page-work {
   display: grid;
@@ -1025,7 +1026,7 @@ button:focus {
     width: fit-content;
     text-align: center;
     max-width: 70vw;
-    margin: 50px auto;
+    margin: auto auto 50px;
   }
   .next-btn {
     grid-column: 3;
